style: spacing fix inside notifications panel

--- a/src/styles/components/_notifications-panel.scss
+++ b/src/styles/components/_notifications-panel.scss
@@ -42,7 +42,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  margin-top: 18px;
+  // margin-top: 18px;
   //   min-height: 800px;
 }
 
